<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tv1">Weather App</string>
    <string name="btnCrPos">Create Position</string>
    <string name="btnOldData">View Saved Data</string>
    <string name="btnAllLoc">View All Locations</string>
    <string name="tvPlace">Place</string>
    <string name="tvWeather">Weather</string>
    <string name="tvTemperature">Temperature</string>
    <string name="tvDownfall">Downfall</string>
    <string name="tvWindSpd">Windspeed</string>
    <string name="tvWindDeg">Winddegree</string>
    <string name="btnSaveDat">Save Data</string>
    <string name="btnBack">Back</string>
    <string name="btnSave">Save</string>
    <string name="btnGPSAssist">Use GPS</string>
    <string name="tvName">Name</string>
    <string name="tvAddress">Address</string>
    <string name="tvCoords">Coordinates</string>
    <string name="etHintName">Ex. Home</string>
    <string name="etHintAdd">Ex. London,UK</string>
    <string name="etHintCoord">Ex. 32.21,35.52</string>
    <string name="weather_feed">http://api.openweathermap.org/data/2.5/weather?</string>
    <string name="preferences">Preferences</string>
</resources>
